--- a/app/templates/ask.hbs
+++ b/app/templates/ask.hbs
@@ -1,1 +1,4 @@
 {{new-question saveQuestion='saveQuestion'}}
+<div class="text-center">
+  {{#link-to 'index'}}<button class="btn btn-default">Back</button>{{/link-to}}
+</div>
