edit and delete comments

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,11 +5,11 @@
       <ul class="nav navbar-nav">
         <li>{{#link-to 'index'}}Home{{/link-to}}</li>
         <li>{{#link-to 'about'}}About{{/link-to}}</li>
-        <li>{{#link-to 'contact'}}Contact{{/link-to}}</li>
+        <!-- <li>{{#link-to 'contact'}}Contact{{/link-to}}</li> -->
       </ul>
       <div class="nav navbar-nav navbar-right">
         <ul class="nav navbar-nav">
-          <li>{{#link-to 'ask'}}Ask{{/link-to}}</li>
+          <li>{{#link-to 'ask'}}Ask a question{{/link-to}}</li>
         </ul>
       </div>
     </div>
