--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -1,4 +1,4 @@
-<h3 class="title">New Quesiton</h3>
+<h3 class="title">New Question</h3>
 <form>
   <div class="form-group">
     <label for="title">Title</label>
@@ -15,6 +15,6 @@
     {{input value=username id="username" class="form-control"}}
   </div>
 
-  <button {{action 'saveQuestion'}} class="btn btn-default">Ask</button>
+  <button {{action 'saveQuestion'}} class="btn btn-info">Ask</button>
 </form>
 <br>
