--- a/app/templates/components/question-tiles.hbs
+++ b/app/templates/components/question-tiles.hbs
@@ -1,3 +1,7 @@
+<div class="text-center">
+  <h1 class="title">Recent Questions</h1>
+</div>
+<br><br>
 {{#each questionsSorted as |question|}}
   <div class="row">
     <img src={{question.image}} class="img-responsive col-xs-1"/>
