--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -6,14 +6,31 @@ body {
   background: url('http://images4.alphacoders.com/121/121806.jpg') no-repeat top center fixed;
   background-size: cover;
   min-height:100vh;
-  margin-bottom: 60px;
-  font-family: 'Abel', sans-serif;
+  font-family: 'Quattrocento', serif;
+}
+a {
+  color: #3F83A6;
+}
+button {
+  margin: 2px;
+}
+.btn-info {
+  background-color: #3F83A6;
+}
+.btn-info:hover {
+  background-color: #1F6386;
+}
+.btn-danger {
+  background-color: #D43E23;
+}
+.btn-danger:hover {
+  background-color: #B41E03;
 }
 .container {
   background-color: #EAECEC;
   padding: 3em 4em 2em 4em;
   border-radius: 8px;
-  margin-bottom: 1.5em;
+  margin-bottom: 8em;
   width: 90%;
 }
 nav > .container-fluid {
@@ -24,11 +41,11 @@ nav > .container-fluid {
   background-color: #EAECEC;
 }
 .navbar-brand {
-  color: #085A80;
-  font-size: 2.5em;
+  color: #3F83A6;
+  font-size: 2em;
 }
 .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-    background-color: #3D7896;
+    background-color: #3F83A6;
     color: #ECECEA;
 }
 .footer {
@@ -55,12 +72,6 @@ hr {
 .title {
   margin-top: 0;
 }
-h3 {
-  font-size: 2em;
-}
-h4 {
-  font-size: 1.5em;
-}
-p, li {
+li {
   font-size: 1.15em;
 }
