--- a/app/templates/components/comment-tiles.hbs
+++ b/app/templates/components/comment-tiles.hbs
@@ -1,12 +1,5 @@
 <hr class="comment">
 {{#each commentsSorted as |comment|}}
-  <div class="row">
-    <div class="col-xs-2">
-      <p>{{comment.username}}:</p>
-    </div>
-    <div class="col-xs-10">
-      <p>{{comment.text}}</p>
-    </div>
-  </div>
+  {{edit-comment comment=comment updateComment='updateComment' deleteComment='deleteComment'}}
   <hr class="comment">
 {{/each}}
