--- a/app/templates/components/edit-question.hbs
+++ b/app/templates/components/edit-question.hbs
@@ -1,8 +1,8 @@
 {{#if editMe}}
   <div class="row">
     <div class="col-xs-6">
-      <h1 class="title">{{model.title}}<br>
-         <small>asked by {{model.username}}</small></h1>
+      <h2 class="title">{{model.title}}<br>
+         <small>asked by {{model.username}}</small></h2>
       <br>
       <p>{{model.text}}</p><br>
     </div>
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="col-xs-1">
-      <button class="btn btn-default" {{action 'showEditMe'}} style="float: right;">Update</button>
+      <button class="btn btn-default btn-lg" {{action 'showEditMe'}} style="float: right;"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
     </div>
   </div>
 {{/if}}
