--- a/app/templates/components/edit-comment.hbs
+++ b/app/templates/components/edit-comment.hbs
@@ -1,7 +1,7 @@
 {{#if editMe}}
   <div class="row">
     <div class="col-xs-2">
-      <p>{{comment.username}}:</p>
+      <p>{{comment.username}}</p>
     </div>
     <div class="col-xs-6">
       <form>
@@ -21,7 +21,7 @@
 {{else}}
   <div class="row">
     <div class="col-xs-2">
-      <p>{{comment.username}}:</p>
+      <p>{{comment.username}}</p>
     </div>
     <div class="col-xs-8">
       <p>{{comment.text}}</p>
