--- a/app/templates/components/new-comment.hbs
+++ b/app/templates/components/new-comment.hbs
@@ -15,6 +15,6 @@
     <button {{action 'hideAddComment'}} class="btn btn-default">Cancel</button>
   </form>
 {{else}}
-  <button class="btn btn-info" {{action 'showAddComment'}}>Add Comment</button>
+  <button class="btn btn-info" {{action 'showAddComment'}}>Add Answer</button>
 {{/if}}
 <br>
